--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,13 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+
+#.......
+android/app/build/
+ios/build/
+*.apk
+*.aab
+node_modules/
+*.bundle
+*.map
