--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-scoped-storage": "^1.9.5",
     "react-native-screens": "^4.10.0",
+    "react-native-share": "^12.0.9",
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.2.0"
   },
