--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^8.2.0",
     "react-native-pdf": "^6.7.7",
+    "react-native-pell-rich-editor": "^1.9.0",
     "react-native-permissions": "^5.3.0",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-scoped-storage": "^1.9.5",
     "react-native-screens": "^4.10.0",
     "react-native-share": "^12.0.9",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-table-component": "^1.2.2",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
